[*] Corrigido dependencias do angular material (conflito de versao) [*] Alterado estrutuda do compomente de dropdown para angular material

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,7 @@
 <div style="padding: 60px; margin: 0 auto">
-  <auto-complete></auto-complete>
-
-  <dropdown-list label="DropdownList"
-                 required="true"
-                 [data]="[{ value: 'F', label: 'Feminino'}, { value: 'M', label: 'Masculino' }]"></dropdown-list>
-
+  <form action="" [formGroup]="form">
+    <dropdown-list controlName="dropdownList" label="DropdownList" [options]="origemMercadoria"></dropdown-list>
+  </form>
 </div>
+
+
