--- a/src/app/components/dropdown-list/dropdown-list.component.html
+++ b/src/app/components/dropdown-list/dropdown-list.component.html
@@ -1,8 +1,8 @@
 <mat-form-field appearance="outline">
   <mat-label>{{ label }}</mat-label>
-  <mat-select formControlName="dropdownList" [required]="required">
+  <mat-select [formControl]="control" [required]="required">
     <mat-option *ngFor="let option of options" [value]="option.value">
-      {{option.description}}
+      {{ option.description }}
     </mat-option>
   </mat-select>
 </mat-form-field>
