[*] Adicionado ao autocomplete unsubscribe da request http [*] Adicionado selected item ao autocomplete

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
 <div style="padding: 60px; margin: 0 auto">
   <form action="" [formGroup]="form">
-    <auto-complete [control]="form.get('autocomplete')" label="Autocomplete" [required]="true" [options]="origemMercadoria"></auto-complete>
+    <auto-complete [control]="form.get('autocomplete')" label="Autocomplete" fieldView="descricao" [required]="true"></auto-complete>
     <dropdown-list [control]="form.get('dropdownList')" label="DropdownList" [required]="true" [options]="origemMercadoria"></dropdown-list>
   </form>
 </div>
+
+{{ form.value | json}}
 
 
