[*] Iniciado criacao do modulo de formularios dinamicos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
+<div class="app">
+  <dynamic-form [config]="config"></dynamic-form>
+</div>
+
 <div style="padding: 60px; margin: 0 auto">
   <form action="" [formGroup]="form">
     <auto-complete [control]="form.get('autocomplete')" label="Autocomplete" [required]="true"></auto-complete>
